fix(OVERLAY): Visual z-index bug fixed

--- a/frontend/src/ui/styles/chatroom.module.css
+++ b/frontend/src/ui/styles/chatroom.module.css
@@ -166,7 +166,7 @@
   font-size: 1.3rem;
   font-weight: 400;
 
-  color: lightgray;
+  color: var(--font-adaptive);
 }
 
 .name-modal input {
